feat: add adaptive styles

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,9 @@
       <div class="window-win"></div>
     </div>
   </article>
-
+  <div class="level-bar__burger-button__wrapper">
+    <button class="level-bar__burger-button">Level</button>
+  </div>
   <aside class="level-bar">
     <div class="level-bar__wrapper">
       <div class="level-bar__second-wrapper">
