fix: report project from my private repository RS School

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <article class="game">
     <header class="game-banner">
       <img src="assets/img/banner.png" alt="banner with racoon" class="game-banner__icon">
-      <h1 class="game__title">CSS Pranksters</h1>
+      <h1 class="game-banner__title">CSS Pranksters</h1>
     </header>
 
     <section class="game-room">
