fix: add restriction for viewing the application

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,9 @@
       </div>
     </div>
   </aside>
+  <div class="mobile-warning">
+    <p>Please open me on the computer  <br>🥲 😇 🥹</p>
+  </div>
   <div class="picture-loader"></div>
 </body>
 </html>
