fix: add restriction for viewing the application

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     </div>
   </aside>
   <div class="mobile-warning">
-    <p>Please open me on the computer  <br>🥲 😇 🥹</p>
+    <p>Please open me on the computer  <br> 😊 😊 😊</p>
   </div>
   <div class="picture-loader"></div>
 </body>
